キャンペーンの新規作成機能の追加

--- a/src/main/resources/templates/shared/_header.html
+++ b/src/main/resources/templates/shared/_header.html
@@ -11,7 +11,7 @@
                 <span class="text">キャンペーン</span>
                 <i class="dropdown icon"></i>
                 <div class="menu">
-                    <a class="item" href="#">新規作成</a>
+                    <a class="item" href="/auth/campaign">新規作成</a><!--キャンペーン新規作成 リンクを作る操作/auth/createちゃんとloginしてないとページに移らないようになっている-->
                     <a class="item" href="#">作成キャンペーン一覧</a>
                 </div>
             </div>
